--- a/ai-ticket-frontend/index.html
+++ b/ai-ticket-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://i.postimg.cc/qMFGXZPD/oie-pc-Baz-As-Bg-Us7.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Ticket System - SP</title>
   </head>
